--- a/assets/style.css
+++ b/assets/style.css
@@ -21,6 +21,8 @@ body {
 }
 
 .cartao__conteudo {
+    transform-style: preserve-3d;
+ transition: transform 300ms ease-in-out;
     background-color: var(--card-front-color);
     text-align: center;
     /* background-color: aquamarine; */
@@ -28,6 +30,7 @@ body {
 }
 
 .cartao__conteudo h3 {
+    backface-visibility: hidden;
     color: var(--text-color);
     border: 1px solid var(--text-color);
     text-align: left;
@@ -40,7 +43,8 @@ body {
 
 .cartao__conteudo p {
     margin-top: 1rem;
-    padding: 2rem;
+    padding: 2rem
+    margin-top: 4rem
 }
 
 .cartao__conteudo__pergunta p {
@@ -66,4 +70,19 @@ footer p {
     text-align: center;
     font-size: 0.6rem;
     margin-top: 0.5rem;
+}
+.cartao:hover .cartao__conteudo {
+    transform: rotateY(180deg);
+}
+
+.cartao__conteudo__pergunta,
+.cartao__conteudo__resposta {
+    backface-visibility: hidden;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+
+.cartao__conteudo__resposta {
+    transform: rotateY(180deg);
 }
